openshift/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devcon
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
spec:
  finalizers:
  - kubernetes
